2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize UI of `cm4'.

	* tools/bin/cm4.in: Replace parameter syntax `-Wm4,XXX' by `-X
	XXX'. Support redirecting to the output specified with `-o'.

	* tools/bin/cce.in,
	* tools/bin/slc.in: Use `-X' and `-o'.

2010-05-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start integrating `spr' with `slc'.

	* tools/bin/cm4.in: Recognize `-I'.

	* tools/bin/slc.in: Move cm4-specific stuff to...
	* tools/bin/cce.in: ...here. Generalize translation stage via
	new variable `$slc_translator'. Allow `spr' to replace `cm4'.
	* tools/bin/slc.in: Simplify accordingly.
	
	* tools/bin/slc.in: Propagate `-P' to underlying tools instead of
	translating. Move setting of `-E' to...
	* tools/lib/slc/input/cm4.py: ...here.

	* tools/bin/Makefile.am,
	* build-aux/slc.m4,
	* build-aux/slcvars.mk: Make the tools aware of the location of
	`spr'.

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes.

	* tools/bin/spp: Disable the warning for now, it is too
	annoying.

	* tools/lib/slc/mtalpha/regmagic.py (mapcall): Fix typo
	(`glfarg').

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Packaging fixes.

	* tools/lib/Makefile.am,
	* tools/lib/mtalpha.mk: Adjust file paths after recent changes.

	* build-aux/slc.m4,
	* build-aux/slcvars.mk: Make the tools aware of the new Python
	library via `PYTHONPATH'.

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove targets `ppp' and `ppp2'. Keep `spp' as transition target.

	* tools/lib/t-ppp2alpha/slimpl.m4,
	* tools/lib/t-ppp2alpha/include/sl_support.h: Rename to...

	* tools/lib/t-sppalpha/slimpl.m4,
	* tools/lib/t-sppalpha/include/sl_support.h: ... here.

	* tools/bin/cce.in: Remove references to `ppp' and
	`ppp2'. Introduce `spp' instead.

	* tools/bin/spp: Update accordingly.

	* tools/lib/mtalpha-sim/slrt.s: Use the short alias `mtalpha' for the
	slr data tag, to allow future adaptation.

2010-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
