@@ -27,6 +27,14 @@ EXTRA_TEST_IMPL += mtalpha::-m~mlcoma_default
 endif
 endif
 
+if ENABLE_CHECK_SPR
+EXTRA_TEST_IMPL += spr+seq-host-host-seqc
+if ENABLE_CHECK_SPR_MTA
+EXTRA_TEST_IMPL += spr+mta-mtalpha-sim
+EXTRA_TEST_IMPL += spr+mta+seq-mtalpha-sim
+endif
+endif
+
 if ENABLE_CHECK_UTC
 EXTRA_TEST_IMPL += utc0:-O0 utc0:-O1 utcx
 endif
